--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,8 @@ body{
 	color: #FFF;
 	margin-top: 20%;
 }
-.btn-call {
+.btn-call,
+.btn-accept{
   background: #2dcc70;
   color: #FFF;
   margin-top: 15px;
@@ -41,12 +42,32 @@ body{
 	color: #FFF;
 	display: none;
 	float: left;
-	margin-left: 95px;
+	margin-left: 15px;
   	margin-top: 15px;
 }
-.btn-call:hover{
+.btn-call:hover,
+.btn-accept:hover	{
 	background: #1aaf5d;
 	color: #FFF;
+}
+.btn-warning {
+  color: #fff;
+  background-color: #f0ad4e;
+  border-color: #eea236;
+  float: left !important;
+  margin-top: 15px !important;
+  margin-left: 15px !important;
+}
+.btn-stop-share{
+  background: #e67e22;
+  color: #FFF;
+  display: none;
+  float: left;
+  margin: 15px;
+}
+.btn-stop-share:hover{
+  background: #d35400;
+  color: #FFF;
 }
 .agent-video{
 	width: 100%;
@@ -179,6 +200,41 @@ li.recieve {
   height: 100%;
   padding: 0;
   margin:0;
+}
+.modal-dialog-small {
+  position: relative;
+  width: 600px;
+  margin: 30px auto;
+}
+.modal.fade .modal-dialog-small {
+  -webkit-transition: -webkit-transform .3s ease-out;
+  -o-transition: -o-transform .3s ease-out;
+  transition: transform .3s ease-out;
+  -webkit-transform: translate(0,-25%);
+  -ms-transform: translate(0,-25%);
+  -o-transform: translate(0,-25%);
+  transform: translate(0,-25%);
+}
+.modal-dialog-small .modal-content{
+  -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
+   box-shadow: 0 5px 15px rgba(0,0,0,.5);
+     position: relative;
+  background-color: #fff;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  border: 1px solid #999;
+  border: 1px solid rgba(0,0,0,.2);
+  border-radius: 6px;
+  outline: 0;
+  -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+  box-shadow: 0 3px 9px rgba(0,0,0,.5);
+}
+.modal-header .dark{
+	color: #6c7a89;
+}
+div#lblMessage{
+	color: #6c7a89;
+	font-size: 18px;
 }
 .modal-content {
   
